styles.css
body {
  font-size: 1em;
  font-family: Roboto, arial, sans-serif;
  color: #202124;
}

.nav {
  display: flex;
  justify-content: right;
}
.adv-nav {
  display: flex;
  justify-content: space-between;
}
.link {
  padding: 1em;
  color: inherit;
  text-decoration: none;
}
.link:hover {
  text-decoration: underline;
}

.wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.logo {
  width: 18em;
  margin-top: 6em;
}
.adv-logo {
  width: 6em;
  margin-top: auto;
  padding: 2em;
}

.adv-search {
  color: #d93025;
  font-weight: normal;
  font-size: 1.2em;
  padding-left: 2.5rem;
  padding-bottom: 1rem;
}

.form {
  padding: 1.25em;
}
.adv-form {
  max-width: 45em;
}
.form-heading {
  font-size: 1em;
  padding-left: 2.5rem;
  padding-top: 1.75rem;
  font-weight: normal;
}
.adv-fields {
  display: grid;
  grid-template-columns: 12em 1fr;
  padding: 1rem 2.5rem;
  grid-gap: 1em;
}
.adv-fields label {
  font-size: 0.9em;
}
.txt {
  padding: 0.8em;
  max-width: 30rem;
  width: 100%;
  font-size: 1em;
  border-radius: 2em;
  border: 0.1em solid #dfe1e5;
}
.adv-txt {
  padding: 0.2em;
  font-size: 1em;
  border: 0.1em solid #dfe1e5;
}
.btn-wrapper {
  padding: 1.5em 2.5rem;
  display: flex;
  flex-direction: row-reverse;
}
.btn {
  padding-top: 1.5em;
}
.submit {
  background-color: #f8f9fa;
  border-radius: 0.4em;
  padding: 0.8em 1.8em;
  margin: 0rem 0.2rem;
  cursor: pointer;
  border: 0.1em solid transparent;
}
.blue-btn {
  background-color: #488bf8;
  color: #e8eaed;
  font-weight: bold;
}
.submit:hover {
  border: 0.1em solid rgb(218, 220, 224);
}

@media (prefers-color-scheme: dark) {
  body {
    background: #202124;
    color: #e8eaed;
  }
  .txt {
    background-color: transparent;
    border: 0.1em solid #5f6368;
    color: inherit;
  }
  .submit {
    background-color: #303134;
    color: inherit;
  }
}

@media screen and (max-width: 480px) {
  body {
    font-size: 1rem;
  }
  .logo {
    width: 12rem;
  }
  .txt {
    font-size: 1rem;
  }
  .submit {
    font-size: 1rem;
  }
  .adv-fields {
    grid-template-columns: 18rem;
  }
  .adv-fields label {
    font-size: 1rem;
  }
  .form-heading {
    font-size: 1.1rem;
  }
}

